[project]
name = "claudebg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simple-term-menu>=1.6.6",
]

[project.scripts]
claudebg = "claudebg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
