[tool.poetry]
name = "claudebg"
version = "0.1.0"
description = ""
authors = ["Ronith Kandallu <ronithkandallu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ronithk/claudebg"
packages = [{ include = "claudebg" }]

[tool.poetry.scripts]
claudebg = "claudebg:main"

[tool.poetry.dependencies]
python = "^3.12"
simple-term-menu = "^1.6.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
